[project]
name = "comfyui-enhancedlinksandnodes"
description = "A visually stunning ComfyUI extension that adds customizable animations to links and nodes, featuring 9 unique link animations, 4 node animation styles, and comprehensive customization options. No extra packages required."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AEmotionStudio/ComfyUI-EnhancedLinksandNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AEmotionStudio"
DisplayName = "ComfyUI-EnhancedLinksandNodes"
Icon = ""
